--- a/week02/task2.html
+++ b/week02/task2.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>CSE 121b: Week 02 | Sample Solution</title>
+	<title>CSE 121b: bibliography</title>
 	<link href="https://fonts.googleapis.com/css?family=Kalam&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles/main.css">
 </head>
@@ -15,7 +15,7 @@
         <ul id="menu">
             <li><a id="toggleMenu">&equiv;</a></li>
             <li><a href="../../week01/provided_solution">Home</a></li>
-            <li><a href="#" class="active">Lesson 2</a></li>
+            <li><a href="#" class="active">Bibliography</a></li>
         </ul>
     </nav>
     <header>
@@ -35,7 +35,7 @@
         </section>
     </main>
 	<footer>
-        &copy;<span id="year"></span> | Biography | Lesson 2
+        &copy;<span id="year"></span> | Final |
     </footer>
     <script src="scripts/main.js"></script>
     <script src="scripts/task2.js"></script>
