--- a/week02/task2.html
+++ b/week02/task2.html
@@ -20,7 +20,7 @@
     </nav>
     <header>
         <h1>Biography</h1>
-        <img src="images/placeholder.png" alt="Photo">
+        <img src="images/placeholder.png" alt="Photo:John paint balling">
     </header>
     <main>
         <section>
@@ -31,6 +31,10 @@
             <div>
                 <label>Favorite Foods:</label>
                 <span id="food"></span>
+            </div>
+            <div>
+                <label>Summary:</label>
+                <span id="summary"></span>
             </div>
         </section>
     </main>
